syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "CustomerProto";
option objc_class_prefix = "HLW";

package helloworld;

service CustomerService {
    rpc CustomerInfo (CustomerRequest) returns (CustomerResponse) {
    }
}

message CustomerRequest {
    int32 id = 1;
}

message CustomerResponse {
    string name = 1;
    string lastName = 2;
    int32 id = 3;
}
